ndb - bug#52325 - don't abort but handle errors in ndbcluster_find_all_databases